@@ -1,6 +1,12 @@
 2009-11-01  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* python/things/command/main.py:
+	* python/things/model/couch.py:
+	  Implemented done and edit.
+
+2009-11-01  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* python/things/command/main.py:
 	* python/things/common/parse.py:
 	  Do proper time/recurrence parsing and formatting.
 
